MyLang.java
/* Generated By:JavaCC: Do not edit this line. MyLang.java */
import java.io.*;
import java.util.ArrayList;
public class MyLang implements MyLangConstants {
  public static void main(String args []) throws ParseException
  {
   try{
        FileInputStream f = new FileInputStream(args[0]);
        MyLang parser = new MyLang(f);
        Exp exp = MyLang.program();
        if(exp != null){
                ValEnv ve = exp.eval(new Env());
        }
   }
   catch(FileNotFoundException e){
                System.err.println("File not found: " + args[0]);
   }
        System.exit(0);
   }

  static final public Exp program() throws ParseException {
 ArrayList<Exp> exps = new ArrayList<Exp>(); Exp exp = null; Exp main = null;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        exp = method();
      } else if (jj_2_3(2)) {
        exp = cl();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                   exps.add(exp);
    }
    exp = main();
    jj_consume_token(0);
   {if (true) return new ProgExp(new MultiExp(exps), exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp main() throws ParseException {
 Token t = null;ArrayList<String> params = new ArrayList<String>(); Exp exp = null; ArrayList<Exp> exps = new ArrayList<Exp>();
    t = jj_consume_token(MAIN);
    params = params();
    jj_consume_token(COLON);
    exp = body();
   {if (true) return new AssignExp( t.image, new MethodExp(params, exp));}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String> params() throws ParseException {
 ArrayList<String> params = new ArrayList<String>();
    jj_consume_token(LPAREN);
    label_2:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(VARIABLE);
                                  params.add(token.image);
    }
    jj_consume_token(RPAREN);
                                                                         {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp exp() throws ParseException {
 Exp exp = null; Token t = null;
    if (jj_2_6(2)) {
      exp = sum();
                         {if (true) return exp;}
    } else if (jj_2_7(2)) {
      exp = list();
                         {if (true) return exp;}
    } else if (jj_2_8(2)) {
      exp = logical();
                     {if (true) return exp;}
    } else if (jj_2_9(3)) {
      exp = procCall();
                                 {if (true) return exp;}
    } else if (jj_2_10(2)) {
      exp = comment();
                     {if (true) return exp;}
    } else if (jj_2_11(2)) {
      jj_consume_token(STRING);
                         {if (true) return new StringExp(token.image);}
    } else if (jj_2_12(2)) {
      jj_consume_token(IN);
      jj_consume_token(LPAREN);
      if (jj_2_5(2)) {
        exp = exp();
      } else {
        ;
      }
      jj_consume_token(RPAREN);
                                             {if (true) return new InExp(exp);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp stm() throws ParseException {
 Exp exp = null; Token t = null;
    if (jj_2_15(2)) {
      exp = comment();
                        {if (true) return exp;}
    } else if (jj_2_16(2)) {
      exp = assignment();
                        {if (true) return exp;}
    } else if (jj_2_17(2)) {
      exp = conditional();
                        {if (true) return exp;}
    } else if (jj_2_18(2)) {
      exp = give();
                            {if (true) return exp;}
    } else if (jj_2_19(2)) {
      exp = method();
                            {if (true) return exp;}
    } else if (jj_2_20(2)) {
      exp = forLoop();
                            {if (true) return exp;}
    } else if (jj_2_21(3)) {
      exp = add();
                                    {if (true) return exp;}
    } else if (jj_2_22(2)) {
      exp = cl();
                        {if (true) return exp;}
    } else if (jj_2_23(2)) {
      exp = exp();
                            {if (true) return exp;}
    } else if (jj_2_24(2)) {
      if (jj_2_13(2)) {
        t = jj_consume_token(OUT);
      } else if (jj_2_14(2)) {
        t = jj_consume_token(OUTLN);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAREN);
      exp = exp();
      jj_consume_token(RPAREN);
                                                            {if (true) return new OutExp(exp,t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp list() throws ParseException {
 ArrayList<Exp> exps = new ArrayList<Exp>(); Exp exp = null;
    jj_consume_token(LBRACKET);
    label_3:
    while (true) {
      if (jj_2_25(2)) {
        ;
      } else {
        break label_3;
      }
      exp = exp();
                                   exps.add(exp);
    }
    jj_consume_token(RBRACKET);
         {if (true) return new ListExp(exps);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp contains() throws ParseException {
 Exp exp = null; Token t = null;
    t = jj_consume_token(VARIABLE);
    jj_consume_token(DOT);
    jj_consume_token(CONTAINS);
    jj_consume_token(LPAREN);
    exp = exp();
    jj_consume_token(RPAREN);
         {if (true) return new ContainsExp(t.image, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp add() throws ParseException {
 Token t = null;Exp exp = null;
    t = jj_consume_token(VARIABLE);
    jj_consume_token(DOT);
    jj_consume_token(ADD);
    jj_consume_token(LPAREN);
    exp = exp();
    jj_consume_token(RPAREN);
         {if (true) return new AddExp(t.image, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp method() throws ParseException {
 Token t = null;ArrayList<String> params = new ArrayList<String>(); Exp exp = null; ArrayList<Exp> exps = new ArrayList<Exp>();
    jj_consume_token(DM);
    t = jj_consume_token(VARIABLE);
    params = params();
    jj_consume_token(COLON);
    exp = body();
   {if (true) return new AssignExp(t.image, new MethodExp(params, exp));}
    throw new Error("Missing return statement in function");
  }

  static final public Exp cl() throws ParseException {
 Exp init = null; ArrayList<Exp> meths = new ArrayList<Exp>(); Token t = null;
    jj_consume_token(DC);
    t = jj_consume_token(VARIABLE);
    jj_consume_token(COLON);
    init = initializer();
    meths = methodList();
    jj_consume_token(END);
 {if (true) return new AssignExp(t.image, new ClassExp(init, meths));}
    throw new Error("Missing return statement in function");
  }

  static final public Exp initializer() throws ParseException {
 ArrayList<String> params = new ArrayList<String>(); ArrayList<Exp> fields = new ArrayList<Exp>(); Exp exp = null;
    jj_consume_token(DI);
    params = params();
    jj_consume_token(COLON);
    label_4:
    while (true) {
      if (jj_2_26(2)) {
        ;
      } else {
        break label_4;
      }
      exp = field();
                           fields.add(exp);
    }
    if (jj_2_27(2)) {
      exp = body();
    } else if (jj_2_28(2)) {
      jj_consume_token(END);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  {if (true) return new InitializerExp(params, fields, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp field() throws ParseException {
  Exp exp1 = null; Token t;
    jj_consume_token(THIS);
    jj_consume_token(DOT);
    t = jj_consume_token(VARIABLE);
    jj_consume_token(ASSIGN);
    exp1 = exp();
          {if (true) return new AssignExp(t.image, exp1);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Exp> methodList() throws ParseException {
 ArrayList<Exp> methods = new ArrayList<Exp>(); Exp exp = null;
    label_5:
    while (true) {
      if (jj_2_29(2)) {
        ;
      } else {
        break label_5;
      }
      exp = method();
                         methods.add(exp);
    }
                                               {if (true) return methods;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp sum() throws ParseException {
 Exp exp1 = null, exp2 = null; Token t;
    exp1 = term();
    label_6:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_31(2)) {
        t = jj_consume_token(PLUS);
      } else if (jj_2_32(2)) {
        t = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = term();
   exp1 = new ArithExp(t.image, exp1, exp2);
    }
   {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp term() throws ParseException {
 Exp exp1 = null, exp2 = null; Token t;
    exp1 = unary();
    label_7:
    while (true) {
      if (jj_2_33(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_34(2)) {
        t = jj_consume_token(MULTIPLY);
      } else if (jj_2_35(2)) {
        t = jj_consume_token(DIVIDE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = unary();
   exp1 = new ArithExp(t.image, exp1, exp2);
    }
   {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp unary() throws ParseException {
 Exp exp = null;
    if (jj_2_36(2)) {
      jj_consume_token(MINUS);
      exp = element();
                           {if (true) return new ArithExp("-", new LiteralExp("0"), exp);}
    } else if (jj_2_37(2)) {
      exp = element();
                {if (true) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp element() throws ParseException {
 Exp exp = null;Token t = null;
    if (jj_2_42(2)) {
      if (jj_2_38(2)) {
        jj_consume_token(LITERAL);
                exp =  new LiteralExp(token.image);
      } else if (jj_2_39(2)) {
        t = jj_consume_token(VARIABLE);
        jj_consume_token(LBRACKET);
        exp = exp();
        jj_consume_token(RBRACKET);
                                                       {if (true) return new ArrayAccessExp(t.image, exp);} /*array[i]*/
      } else if (jj_2_40(2)) {
        jj_consume_token(VARIABLE);
                exp =  new IdExp(token.image);
      } else if (jj_2_41(2)) {
        jj_consume_token(LPAREN);
        exp = exp();
        jj_consume_token(RPAREN);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                    {if (true) return exp;}
    } else if (jj_2_43(2)) {
      exp = procCall();
                         {if (true) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp forLoop() throws ParseException {
 Exp exp1 = null;Token t1; Token t2; Exp exp2 = null; Exp exp3 = null; Exp exp4 = null;
    jj_consume_token(FOR);
    t1 = jj_consume_token(VARIABLE);
    jj_consume_token(ASSIGN);
    jj_consume_token(LPAREN);
    exp1 = exp();
    jj_consume_token(RARROW);
    exp2 = exp();
    jj_consume_token(RPAREN);
    if (jj_2_44(2)) {
      t2 = jj_consume_token(PLUS);
    } else if (jj_2_45(2)) {
      t2 = jj_consume_token(MINUS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    exp3 = exp();
    jj_consume_token(COLON);
    exp4 = body();
           {if (true) return new ForExp(t1.image, t2.image, exp1, exp2, exp3, exp4);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp assignment() throws ParseException {
 Exp exp1 = null; Exp exp2 = null; Token t; ArrayList<Exp> params = new ArrayList<Exp>();
    if (jj_2_46(2)) {
      t = jj_consume_token(VARIABLE);
      jj_consume_token(ASSIGN);
      exp1 = exp();
                                          {if (true) return new AssignExp(t.image, exp1);}  /*x = 5*/
    } else if (jj_2_47(2)) {
      t = jj_consume_token(VARIABLE);
      jj_consume_token(LBRACKET);
      exp1 = exp();
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      exp2 = exp();
         {if (true) return new ArrayAssignExp(t.image, exp1, exp2);} /*array[i] = x*/

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp conditional() throws ParseException {
 Exp exp = null; Exp exps1 = null; Exp exps2 = null;
    jj_consume_token(IF);
    exp = logical();
    jj_consume_token(COLON);
    exps1 = body();
    if (jj_2_48(2)) {
      jj_consume_token(ELSE);
      jj_consume_token(COLON);
      exps2 = body();
    } else {
      ;
    }
   {if (true) return new ConditionalExp(exp, exps1, exps2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp logical() throws ParseException {
 boolean neg = false; Exp exp1 = null; Exp exp2 = null; Token t;
    if (jj_2_59(2)) {
      t = jj_consume_token(NOT);
      jj_consume_token(LPAREN);
      exp1 = element();
      if (jj_2_49(2)) {
        t = jj_consume_token(EQUALS);
      } else if (jj_2_50(2)) {
        t = jj_consume_token(LESSTHAN);
      } else if (jj_2_51(2)) {
        t = jj_consume_token(GREATERTHAN);
      } else if (jj_2_52(2)) {
        t = jj_consume_token(LEQ);
      } else if (jj_2_53(2)) {
        t = jj_consume_token(GEQ);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = element();
      jj_consume_token(RPAREN);
                                                                                                                                                      neg = true; {if (true) return new LogicalExp(neg, t.image, exp1, exp2);}
    } else if (jj_2_60(2)) {
      exp1 = element();
      if (jj_2_54(2)) {
        t = jj_consume_token(EQUALS);
      } else if (jj_2_55(2)) {
        t = jj_consume_token(LESSTHAN);
      } else if (jj_2_56(2)) {
        t = jj_consume_token(GREATERTHAN);
      } else if (jj_2_57(2)) {
        t = jj_consume_token(LEQ);
      } else if (jj_2_58(2)) {
        t = jj_consume_token(GEQ);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = element();
                                                                                                                     {if (true) return new LogicalExp(neg, t.image, exp1, exp2);}
    } else if (jj_2_61(2)) {
      exp1 = contains();
                        {if (true) return exp1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp body() throws ParseException {
 ArrayList<Exp> exps = new ArrayList<Exp>(); Exp exp = null;

    label_8:
    while (true) {
      if (jj_2_62(2)) {
        exp = stm();
      } else if (jj_2_63(2)) {
        exp = exp();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                             exps.add(exp);
      if (jj_2_64(3)) {
        ;
      } else {
        break label_8;
      }
    }
    jj_consume_token(END);
   {if (true) return new MultiExp(exps);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp give() throws ParseException {
  Exp exp = null;
    jj_consume_token(GIVE);
    exp = exp();
                            {if (true) return new GiveExp(exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp procCall() throws ParseException {
 ArrayList<Exp> exps = new ArrayList<Exp>(); Exp exp = null; Exp caller = null;
    if (jj_2_67(2)) {
      jj_consume_token(VARIABLE);
                       caller = new IdExp(token.image);
      jj_consume_token(RARROW);
      jj_consume_token(VARIABLE);
                                                                                 exps.add(new IdExp(token.image));
      jj_consume_token(LPAREN);
      label_9:
      while (true) {
        if (jj_2_65(2)) {
          ;
        } else {
          break label_9;
        }
        exp = exp();
                                                                                                                                            exps.add(exp);
      }
      jj_consume_token(RPAREN);
         {if (true) return new ProcedureExp(caller, exps);}
    } else if (jj_2_68(2)) {
      jj_consume_token(DOT);
      jj_consume_token(VARIABLE);
                         exps.add(new IdExp(token.image));
      jj_consume_token(LPAREN);
      label_10:
      while (true) {
        if (jj_2_66(2)) {
          ;
        } else {
          break label_10;
        }
        exp = exp();
                                                                                    exps.add(exp);
      }
      jj_consume_token(RPAREN);
         {if (true) return new ProcedureExp(caller, exps);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp comment() throws ParseException {
    jj_consume_token(COMMENT);
                    {if (true) return new CommentExp();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }
